# oly-program-generator

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  SCALING.md  SECURITY.md  TESTING.md  TODO-audit-2026-07-03.md  TODO.md  athlete_schema.sql  auth_migration.sql  ruff.toml  schema.sql
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DB-MACHINE-RUNBOOK.md  RETRIEVAL_EVAL.md  SCHEMA.md  SETUP.md
docs/design/: PROGRESS.md  SCALING.md  oly-code-reference.md  oly-programming-agent.md  oly-programming-pipeline.md
oly-agent/: .coveragerc  alembic.ini  assess.py  explain.py  feedback.py  generate.py  log.py  models.py  orchestrator.py  phase_profiles.py  phase_progression.py  plan.py  pyproject.toml  retrieve.py  schemas.py  session_templates.py  setup_auth.py  validate.py  weight_resolver.py
oly-agent/migrations/: db_url.py  env.py
oly-agent/migrations/versions/: 0000_ingestion_schema.py  0001_baseline.py  0002_athlete_cost_limit.py  0003_athlete_is_admin.py  0004_principle_unique.py  0005_athlete_timezone.py  0006_program_template_unique.py  0007_training_log_unique_session.py
oly-agent/tests/: test_assess.py  test_config.py  test_explain.py  test_feedback.py  test_formulas.py  test_generate_utils.py  test_log.py  test_orchestrator.py  test_phase_profiles.py  test_phase_progression.py  test_plan.py  test_retrieve.py  test_schemas.py  test_validate.py  test_web_queries.py  test_web_routers.py  test_weight_resolver.py
oly-agent/web/: app.py  async_db.py  auth.py  deps.py  formparse.py  jobs.py  logging_config.py  options.py  worker.py
oly-agent/web/queries/: admin.py  dashboard.py  export.py  history.py  log_session.py  profile.py  program.py  setup.py
oly-agent/web/routers/: admin.py  auth.py  dashboard.py  export.py  generate.py  health.py  history.py  log_session.py  profile.py  program.py  setup.py
oly-agent/web/templates/: admin_job_detail.html  admin_jobs.html  base.html  dashboard.html  error.html  generate.html  history.html  log_session.html  login.html  profile.html  program.html  program_list.html  setup.html
oly-agent/web/templates/partials/: exercise_log_entry.html  exercise_log_section.html  exercise_logged_row.html  generate_result.html  lift_ratios.html  maxes_table.html  outcome_summary.html  status_badge.html
oly-ingestion/: .coveragerc  .env.example  .gitignore  config.py  docker-compose.yml  ingest_web.py  pipeline.py  pyproject.toml  requirements.txt  retag_chunks.py
oly-ingestion/extractors/: epub_extractor.py  html_extractor.py  pdf_extractor.py
oly-ingestion/loaders/: structured_loader.py  vector_loader.py
oly-ingestion/processors/: chunker.py  classifier.py  ocr_corrections.py  principle_extractor.py
oly-ingestion/tests/: test_chunker.py  test_classifier.py  test_epub_extractor.py  test_html_extractor.py  test_ingest_web.py  test_llm_helpers.py  test_parse_exercise.py  test_pdf_extractor.py  test_pipeline.py  test_pipeline_unit.py  test_principle_extractor.py  test_retag_chunks.py  test_retrieval_eval.py  test_structured_loader.py  test_structured_loader_unit.py  test_vector_loader.py  test_vector_loader_units.py
shared/: config.py  constants.py  db.py  exercise_mapping.py  formulas.py  llm.py  prilepin.py  timeutil.py
