[project]
name = "oly-agent"
version = "0.1.0"
description = "Olympic weightlifting programming agent"
requires-python = ">=3.11"
dependencies = [
    # Database
    "psycopg2-binary>=2.9.9,<3",
    "pgvector>=0.2.4,<1",
    "alembic>=1.13.0,<2",
    # LLM
    "anthropic>=0.25.0,<1",
    # Validation
    "pydantic>=2.0,<3",
    # Utilities
    "python-dotenv>=1.0.0,<2",
    # IANA timezone data — zoneinfo has no OS database on Windows, so without
    # this the per-athlete timezone feature silently falls back to UTC (INF-M1).
    # Harmless no-op wheel on Linux.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0,<1",
    "uvicorn[standard]>=0.27.0,<1",
    "jinja2>=3.1.0,<4",
    "python-multipart>=0.0.9,<1",
    "slowapi>=0.1.9,<1",
    "bcrypt>=4.0.0,<6",
    "itsdangerous>=2.1.0,<3",
    "asyncpg>=0.29.0,<1",
    "arq>=0.25.0,<1",
    "redis>=5.0.0,<9",
]
dev = [
    "pytest>=8.0.0",
    "coverage>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
markers = [
    "live_db: requires live Postgres connection",
    "live_api: requires ANTHROPIC_API_KEY or OPENAI_API_KEY",
    "integration: requires INTEGRATION_TESTS=1",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "web/*", ".venv/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = false
