[project]
name = "oly-ingestion"
version = "0.1.0"
description = "Olympic weightlifting programming ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    # Database
    "psycopg2-binary>=2.9.9,<3",
    "pgvector>=0.2.4,<1",
    # PDF extraction
    "pymupdf>=1.23.0,<2",
    "pdfplumber>=0.10.0,<1",
    # Embeddings + LLM
    "openai>=2.0.0,<3",
    "anthropic>=0.25.0,<1",
    # HTML extraction
    "beautifulsoup4>=4.12.0,<5",
    "lxml>=5.0.0,<7",
    # Utilities
    "python-dotenv>=1.0.0,<2",
    "ebooklib>=0.20,<1",
    "requests>=2.32.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "coverage>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
markers = [
    "live_db: requires live Postgres connection",
    "live_api: requires ANTHROPIC_API_KEY or OPENAI_API_KEY",
    "integration: requires INTEGRATION_TESTS=1",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
